[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Syntax checker for mq files"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-check"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.14"

[dependencies]
clap = {version = "4.5.58", features = ["derive"]}
colored = "3.1.1"
miette = {version = "7.6.0", features = ["fancy"]}
mq-hir = "0.5.14"

[[bin]]
name = "mq-check"
path = "src/main.rs"
